--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
+
+.logotype {
+	color: darkred;
+	font-family: 'Roboto Slab', serif;
+	font-weight: bold;
+	font-size: 24pt;
+	padding: 10px 30px;
+}
+
+/* Svelte defaults */
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -7,7 +19,7 @@ html, body {
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
+	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
