--- a/public/global.css
+++ b/public/global.css
@@ -1,11 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
 
+a {
+	color: rgb(139,0,0);
+	text-decoration: none;
+}
+
+header .logotype {
+	font-size: 20px;
+}
+
 .logotype {
-	color: darkred;
+	color: rgb(139,0,0);
 	font-family: 'Roboto Slab', serif;
 	font-weight: bold;
-	font-size: 24pt;
-	padding: 10px 30px;
+}
+
+#banner {
+	display: flex;
+	padding: 10px 20px;
+	align-items: center;
+	justify-content: space-between;
+	grid-row-start: header;
+	grid-row-end: main-body;
+}
+
+#grid {
+	height: 100%;
+	display: grid;
+	grid-template-rows: [header] 30px [main-body] auto [footer] 40px;
+	grid-template-columns: 100%;
+}
+
+#grid h1 {
+	text-align: center;
+}
+
+#grid main {
+	margin: 0 20px;
+	display: grid;
+	grid-template-rows: [header] 50px [description] 200px [mini-picker] 70px [main] auto;
+	height: 100%;
+}
+
+#grid footer {
+	grid-row-start: footer;
+	padding: 10px 20px;
 }
 
 /* Svelte defaults */
@@ -24,17 +63,12 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
 a:hover {
 	text-decoration: underline;
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(200, 100, 100);
 }
 
 label {
