--- a/public/global.css
+++ b/public/global.css
@@ -24,7 +24,41 @@ header .logotype {
 	grid-row-end: main-body;
 }
 
+#about-wrapper {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+}
+
+#about-wrapper.hidden {
+	display:none;
+}
+
+#about-wrapper #close-about {
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	background-image: url("./images/x-circle.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-color: white;
+}
+
+#about {
+	position: relative;
+	background-color:rgba(255,255,255,0.96);
+	padding: 40px;
+}
+
+#about h2 {
+	margin-top: 0px;
+}
+
 #grid {
+	line-height: 1.5em;
 	height: 100%;
 	display: grid;
 	grid-template-rows: [header] 30px [main-body] auto [footer] 40px;
